fix: Fixed overflow issue for stats page.
Fixed the overflow issue for stats page by removing the min height. Set fixed height for bar chart.

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -561,7 +561,6 @@ h1 {
 
 /*STATS PAGE*/
 .statsPageContainer {
-  min-height: 100vh;
   width: 100%;
   padding: 40px 20px;
   display: flex;
@@ -581,13 +580,18 @@ h1 {
 }
 
 .chartCard {
+  height: auto;
+  width: fit-content;
+  padding: 20px 30px;
+  box-sizing: border-box;
   background-color: #fff;
   border-radius: 16px;
-  padding: 30px;
+  padding: 16px 30px;
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.12);
   width: 90%;
   max-width: 900px;
   transition: transform 0.2s ease;
+  box-sizing: border-box;
 }
 
 .chartCard:hover {
